converting from pixelbased to colormatrix based

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     
     <string-array name="filters_array">
         <item>Vintage</item>
-        <item>Calm Breeze</item>
+        <item>Breeze</item>
         <item>Glorify</item>
         <item>Pensive</item>
     </string-array>
